Fix #41: Don't jump the whole page up or down when using Up and Down arrow keys.

--- a/styles/selectivity/dropdown.sass
+++ b/styles/selectivity/dropdown.sass
@@ -21,6 +21,7 @@
 .selectivity-results-container
     max-height: 28em
     overflow: auto
+    position: relative
 
 .selectivity-load-more,
 .selectivity-result-item
